# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "favico"
version = "0.1.8"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.74.0"
description = "An utility for creating favicons"
readme = "README.md"
homepage = "https://sorairolake.github.io/favico/"
repository = "https://github.com/sorairolake/favico"
license = "GPL-3.0-or-later"
keywords = ["favicon", "icon"]
categories = ["command-line-utilities"]
include = ["/LICENSES", "/README.md", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bat = { version = "0.24.0", default-features = false, features = ["regex-fancy"] }
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
clap_complete = "4.5.40"
clap_complete_nushell = "4.5.4"
csscolorparser = "0.7.0"
image = { version = "0.25.5", default-features = false, features = ["bmp", "ico", "png", "rayon"] }
indicatif = "0.17.9"
serde_json = { version = "1.0.134", features = ["preserve_order"] }
sysexits = "0.8.5"
xbm = { version = "0.1.3", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.14.0"

[features]
default = [
  "dds",
  "ff",
  "gif",
  "hdr",
  "jpeg",
  "exr",
  "pnm",
  "qoi",
  "tga",
  "tiff",
  "webp",
  "xbm",
]
dds = ["image/dds"]
ff = ["image/ff"]
gif = ["image/gif"]
hdr = ["image/hdr"]
jpeg = ["image/jpeg"]
exr = ["image/exr"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]
xbm = ["dep:xbm"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
